--- a/2.django/templates/home.html
+++ b/2.django/templates/home.html
@@ -22,169 +22,101 @@
 </head>
 
 <body>
-    <!-- Preloader -->
-    <div class="preloader d-flex align-items-center justify-content-center">
-        <div class="preloader-content">
-            <h3>Cooking in progress..</h3>
-            <div id="cooking">
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div class="bubble"></div>
-                <div id="area">
-                    <div id="sides">
-                        <div id="pan"></div>
-                        <div id="handle"></div>
-                    </div>
-                    <div id="pancake">
-                        <div id="pastry"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- ##### Header Area Start ##### -->
-    <header class="header-area">
-        <!-- Top Header Area -->
-        <div class="top-header-area bg-img bg-overlay" style="background-image: url(static/img/bg-img/header.jpg);">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-between">
-                    <div class="col-12 col-sm-6">
-                        <!-- Top Social Info -->
-                        <div class="top-social-info">
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Behance"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-5 col-xl-4">
-                        <!-- Top Search Area -->
-                        <div class="top-search-area">
-                            <form action="#" method="post">
-                                <input type="search" name="top-search" id="topSearch" placeholder="Search">
-                                <button type="submit" class="btn"><i class="fa fa-search"></i></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Logo Area -->
-        <div class="logo-area">
-            <a href="index.html"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
-        </div>
-
-        <!-- Navbar Area -->
-        <div class="bueno-main-menu" id="sticker">
-            <div class="classy-nav-container breakpoint-off">
-                <div class="container">
-                    <!-- Menu -->
-                    <nav class="classy-navbar justify-content-between" id="buenoNav">
-
-                        <!-- Toggler -->
-                        <div id="toggler"><img src="{% static 'img/core-img/toggler.png' %}" alt=""></div>
-
-                        <!-- Navbar Toggler -->
-                        <div class="classy-navbar-toggler">
-                            <span class="navbarToggler"><span></span><span></span><span></span></span>
-                        </div>
-
-                        <!-- Menu -->
-                        <div class="classy-menu">
-
-                            <!-- Close Button -->
-                            <div class="classycloseIcon">
-                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-                            </div>
-
-                            <!-- Nav Start -->
-                            <div class="classynav">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="catagory.html">Catagory</a></li>
-                                            <li><a href="catagory-post.html">Catagory Post</a></li>
-                                            <li><a href="single-post.html">Single Post</a></li>
-                                            <li><a href="receipe.html">Recipe</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Recipes</a>
-                                        <div class="megamenu">
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Recipe</a></li>
-                                                <li><a href="#">- Bread</a></li>
-                                                <li><a href="#">- Breakfast</a></li>
-                                                <li><a href="#">- Meat</a></li>
-                                                <li><a href="#">- Fastfood</a></li>
-                                                <li><a href="#">- Salad</a></li>
-                                                <li><a href="#">- Soup</a></li>
-                                            </ul>
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Recipe</a></li>
-                                                <li><a href="#">- Bread</a></li>
-                                                <li><a href="#">- Breakfast</a></li>
-                                                <li><a href="#">- Meat</a></li>
-                                                <li><a href="#">- Fastfood</a></li>
-                                                <li><a href="#">- Salad</a></li>
-                                                <li><a href="#">- Soup</a></li>
-                                            </ul>
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Recipe</a></li>
-                                                <li><a href="#">- Bread</a></li>
-                                                <li><a href="#">- Breakfast</a></li>
-                                                <li><a href="#">- Meat</a></li>
-                                                <li><a href="#">- Fastfood</a></li>
-                                                <li><a href="#">- Salad</a></li>
-                                                <li><a href="#">- Soup</a></li>
-                                            </ul>
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Recipe</a></li>
-                                                <li><a href="#">- Bread</a></li>
-                                                <li><a href="#">- Breakfast</a></li>
-                                                <li><a href="#">- Meat</a></li>
-                                                <li><a href="#">- Fastfood</a></li>
-                                                <li><a href="#">- Salad</a></li>
-                                                <li><a href="#">- Soup</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li><a href="single-post.html">Blog</a></li>                              
-                                    {% if user.is_authenticated %}
-                                        <li><a href = "{% url 'mypage:index' %}">My Library</a></li>
-                                    {% endif %}
-                                </ul>
-
-                                <!-- Login/Register -->
-                                <div class="login-area">
-                                        {% if user.is_authenticated %}
-                                         Hi {{ user.username }} &nbsp;&nbsp;
-                                        <a href="{% url 'logout' %}">Log out</a>
-                                        {% else %}
-                                        <a href="{% url 'login' %}">Log In </a>&nbsp;&nbsp;
-                                        <a href="{% url 'signup' %}">Sign Up</a>
-
-                                        {% endif %}
+        {% block content %}        
+            <!-- ##### Header Area Start ##### -->
+            <header class="header-area">
+                <!-- Top Header Area -->
+                <div class="top-header-area bg-img bg-overlay" style="background-image: url('{% static 'img/bg-img/header.jpg' %}');">
+                    <div class="container h-100">
+                        <div class="row h-100 align-items-center justify-content-between">
+                            <div class="col-12 col-sm-6">
+                                <!-- Top Social Info -->
+                                <div class="top-social-info">
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Behance"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                                    <a href="#" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 </div>
                             </div>
-                            <!-- Nav End -->
-
+                            <div class="col-12 col-sm-6 col-lg-5 col-xl-4">
+                                <!-- Top Search Area -->
+                                <div class="top-search-area">
+                                    <form action="#" method="post">
+                                        <input type="search" name="top-search" id="topSearch" placeholder="Search">
+                                        <button type="submit" class="btn"><i class="fa fa-search"></i></button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
-                    </nav>
+                    </div>
+                </div>    
+                <div class="logo-area">
+                    <a href="/"><h1>Culture Clinic</h1></a>
                 </div>
-            </div>
-        </div>
-    </header>
-    <!-- ##### Header Area End ##### -->
+            
+                <!-- Navbar Area -->
+                <div class="bueno-main-menu" id="sticker">
+                    <div class="classy-nav-container breakpoint-off">
+                        <div class="container">
+                            <!-- Menu -->
+                            <nav class="classy-navbar justify-content-between" id="buenoNav">
+        
+                                <!-- Toggler -->
+                                <div id="toggler"><img src="{% static 'img/core-img/toggler.png' %}" alt=""></div>
+        
+                                <!-- Navbar Toggler -->
+                                <div class="classy-navbar-toggler">
+                                    <span class="navbarToggler"><span></span><span></span><span></span></span>
+                                </div>
+        
+                                <!-- Menu -->
+                                <div class="classy-menu">
+        
+                                    <!-- Close Button -->
+                                    <div class="classycloseIcon">
+                                        <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                                    </div>
+        
+                                    <!-- Nav Start -->
+                                    <div class="classynav">
+                                        <ul>
+                                            <li><a href="/">Home</a></li>
+                                            <li><a href="search">Search</a></li>
+                                            <li><a href="#">Culture</a>
+                                                <ul class="dropdown">
+                                                    <li><a href="book">book</a></li>
+                                                    <li><a href="movie">movie</a></li>
+                                                    <li><a href="single-post.html">travel</a></li>
+        
+                                                </ul>
+                                            </li>
+                                            <li><a href="community">Community</a></li>
+                                            <li><a href="contact.html">About Us</a></li>                       
+                                            {% if user.is_authenticated %}
+                                                <li><a href = "{% url 'mypage:index' %}">My Library</a></li>
+                                            {% endif %}
+                                        </ul>
+                                    <!-- Login/Register -->
+                                    <div class="login-area">
+                                            {% if user.is_authenticated %}
+                                                Hi {{ user.username }} &nbsp;&nbsp;
+                                                <a href="{% url 'logout' %}">Log out</a>
+                                                {% else %}
+                                                <a href="{% url 'login' %}">Log In </a>&nbsp;&nbsp;
+                                                <a href="{% url 'signup' %}">Sign Up</a>
+                                            {% endif %}
+                                    </div>
+                                </div>
+                                    <!-- Nav End -->
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <!-- ##### Header Area End ##### -->
 
     <!-- ##### Treading Post Area Start ##### -->
     <div class="treading-post-area" id="treadingPost">
@@ -717,7 +649,7 @@
         </div>
     </div>
     <!-- ##### Instagram Area End ##### -->
-
+    {% endblock content %}
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
